--- a/src/components/chatWindow/ChatWindow.scss
+++ b/src/components/chatWindow/ChatWindow.scss
@@ -27,8 +27,7 @@
     height: 510px;
     overflow-y: scroll;
   }
-
-  .chatroom .chats .chat {
+ .chat {
     background: rgba(255, 255, 255, 0.8);
     position: relative;
     padding: 5px 13px;
@@ -39,6 +38,11 @@
     clear: both;
     margin: 10px 0;
     max-width: 200px;
+  }
+
+  .T{
+    font-size: 26px;
+
   }
 
   .chatroom .chats .chat img {
@@ -69,7 +73,7 @@
     align-items: center;
   }
 
-  .chatroom .input input[type="text"] {
+  .inputField {
     background: rgba(255, 255, 255, 0.5);
     outline: 0;
     border: 2px solid #2f5968;
