--- a/src/components/fontOptionContainer/FontOptionContainer.css
+++ b/src/components/fontOptionContainer/FontOptionContainer.css
@@ -5,7 +5,7 @@
   top: 0;
   width: 250px;
   padding: 20px 20px 8px 20px;
-  transition: all .3s ease-out; }
+  transition: all .5s ease-in-out; }
   .FontOptionContainer .FontOptionContainer__Item {
     padding-bottom: 12px; }
   .FontOptionContainer .FontOptionContainer__Title {
