--- a/src/components/chatWindow/ChatWindow.scss
+++ b/src/components/chatWindow/ChatWindow.scss
@@ -40,11 +40,6 @@
     max-width: 200px;
   }
 
-  .T{
-    font-size: 26px;
-
-  }
-
   .chatroom .chats .chat img {
     width: 20px;
     height: 20px;
@@ -74,7 +69,7 @@
   }
 
   .inputField {
-    background: rgba(255, 255, 255, 0.5);
+    background: #FFF;
     outline: 0;
     border: 2px solid #2f5968;
     padding: 0 5px;
