--- a/src/components/fontOptionContainer/FontOptionContainer.css
+++ b/src/components/fontOptionContainer/FontOptionContainer.css
@@ -5,11 +5,13 @@
   top: 0;
   width: 250px;
   padding: 20px 20px 8px 20px;
-  transition: all .5s ease-in-out; }
+  transition: all .5s ease-in-out;
+  border-radius: 0px 0px 4px 4px;
+  border: none; }
   .FontOptionContainer .FontOptionContainer__Item {
-    padding-bottom: 12px; }
+    padding-bottom: 6px;
+    padding-top: 10px; }
   .FontOptionContainer .FontOptionContainer__Title {
-    font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     margin-bottom: 12px; }
   .FontOptionContainer ul {
@@ -51,8 +53,7 @@
       font-size: 16px;
       width: 200px;
       font-weight: bold;
-      text-transform: uppercase;
-      font-family: 'Oswald', sans-serif; }
+      text-transform: uppercase; }
     .FontOptionContainer .FontOptionContainer__Properties .OtherProperties .OtherProperties__Option {
       display: flex;
       align-items: center;
