--- a/src/components/fontOptionContainer/FontOptionContainer.scss
+++ b/src/components/fontOptionContainer/FontOptionContainer.scss
@@ -6,13 +6,15 @@
   width: 250px;
   padding: 20px 20px 8px 20px;
   transition: all .5s ease-in-out;
+  border-radius: 0px 0px 4px 4px;
+  border: none;
 
   .FontOptionContainer__Item {
-    padding-bottom: 12px;
+    padding-bottom: 6px;
+    padding-top: 10px;
   }
 
   .FontOptionContainer__Title {
-    font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     margin-bottom: 12px;
   }
@@ -76,7 +78,6 @@
         width: 200px;
         font-weight: bold;
         text-transform: uppercase;
-        font-family: 'Oswald', sans-serif;
       }
 
       .OtherProperties__Option {
